# hypha

./: .gitignore  .markdown-link-check.json  .prettierignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  LICENSE.md  README.md  cspell.yaml  flake.nix  justfile
.helix/: languages.toml
assets/: root.css  tailwind.css
scripts/flake/: check.nix  deploy.nix  dev.nix  format.nix  lint.nix  lsp.nix  rust.nix  scripts.nix  tools.nix  vcs.nix  wasm.nix
src/: board.rs  container.rs  context.rs  dep.rs  file.rs  hooks.rs  index.rs  issue.rs  item.rs  list.rs  main.rs  provider.rs  ref.rs  resize.rs  search.rs
